--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:16:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:16:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -396,22 +396,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-8</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -6
@@ -426,6 +410,22 @@ E thru 6</td>
 +3 thru 13</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-7</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Justin Thomas -3
+-2 thru 8</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -540,38 +540,6 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-5</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
-      <td>Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-5</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-5</td>
       <td>Rory McIlroy -4
@@ -601,6 +569,38 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-4</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Justin Thomas -3
+-2 thru 8</td>
+      <td>Collin Morikawa(W) E
+-1 thru 11</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-4</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners(W) -2
--1 thru 9</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Robert MacIntyre +3
--3 (F)</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -3
@@ -748,19 +732,19 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Viktor Hovland(W) +3
-E thru 13</td>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners(W) -2
+-1 thru 9</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Robert MacIntyre +3
+-3 (F)</td>
       <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -777,6 +761,22 @@ E thru 13</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -845,9 +845,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Viktor Hovland(W) +3
 E thru 13</td>
       <td>Jon Rahm +4
@@ -861,9 +861,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa(W) E
+-1 thru 11</td>
       <td>Hideki Matsuyama +3
 +1 thru 13</td>
       <td>Jon Rahm +4
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td class="bigbold">17</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tony Finau +6
