--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:16:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:16:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-11</td>
       <td>Cameron Smith -6
 E thru 6</td>
       <td>Rory McIlroy -4
 -5 thru 10</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Tommy Fleetwood(W) +1
-E thru 9</td>
+      <td>Tommy Fleetwood(W) +2
++1 thru 10</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 13</td>
       <td class="greyout">Joaquin Niemann +6
@@ -221,13 +221,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -4
 E thru 7</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Viktor Hovland(W) +3
 E thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Rory McIlroy -4
 -5 thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -269,11 +269,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Will Zalatoris E
 -2 thru 12</td>
       <td>Tony Finau +6
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
 -1 thru 9</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Viktor Hovland(W) +3
 E thru 13</td>
       <td>Jon Rahm +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td class="bigbold">17</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tony Finau +6
