--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:19:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:19:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,9 +157,9 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -6
-E thru 6</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith -7
+-1 thru 7</td>
       <td>Rory McIlroy -4
 -5 thru 11</td>
       <td>Justin Thomas -3
@@ -173,9 +173,9 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -6
-E thru 6</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -7
+-1 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
       <td>Shane Lowry -1
@@ -205,9 +205,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -6
-E thru 6</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -7
+-1 thru 7</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
       <td>Corey Conners -2
@@ -237,9 +237,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -6
-E thru 6</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -7
+-1 thru 7</td>
       <td>Rory McIlroy -4
 -5 thru 11</td>
       <td>Collin Morikawa E
