--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:23:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:24:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,51 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
 -2 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
+      <td>Shane Lowry -2
+E thru 8</td>
       <td>Will Zalatoris -1
 -3 thru 13</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-13</td>
+      <td>Cameron Smith -7
+-1 thru 7</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Shane Lowry -2
+E thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler(W) -11
+-2 thru 7</td>
+      <td>Shane Lowry -2
+E thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -170,38 +202,6 @@ body {
 E thru 13</td>
       <td class="greyout">Joaquin Niemann +6
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith -7
--1 thru 7</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td>Will Zalatoris -1
--3 thru 13</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler(W) -11
--2 thru 7</td>
-      <td>Will Zalatoris -1
--3 thru 13</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
       <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
+      <td>Shane Lowry -2
+E thru 8</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
