--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:24:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:24:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -205,13 +205,13 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -7
 -1 thru 7</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Corey Conners -2
--1 thru 9</td>
+      <td>Corey Conners -1
+E thru 10</td>
       <td>Viktor Hovland +3
 E thru 13</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
-      <td>Corey Conners -2
--1 thru 9</td>
       <td>Shane Lowry -2
 E thru 8</td>
+      <td>Corey Conners -1
+E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Corey Conners -2
--1 thru 9</td>
+      <td>Corey Conners -1
+E thru 10</td>
       <td>Dustin Johnson +2
 +1 thru 12</td>
       <td>Russell Henley +5
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -2
--1 thru 9</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners(W) -1
+E thru 10</td>
       <td>Collin Morikawa E
 -1 thru 11</td>
       <td>Robert MacIntyre +3
