--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:31:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:32:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -196,10 +196,10 @@ Missed Cut</td>
 -5 thru 12</td>
       <td>Justin Thomas -3
 -2 thru 9</td>
-      <td>Tommy Fleetwood(W) +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td>Viktor Hovland +2
 -1 thru 14</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++2 thru 11</td>
       <td class="greyout">Joaquin Niemann +6
 +2 (F)</td>
     </tr>
