--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:35:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:36:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -11
 -2 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 9</td>
-      <td>Shane Lowry -2
-E thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 9</td>
       <td>Will Zalatoris -1
 -3 thru 14</td>
       <td class="greyout leftborder">Tony Finau +6
@@ -157,13 +157,13 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Cameron Smith -7
 -1 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 9</td>
-      <td>Shane Lowry -2
-E thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 9</td>
       <td>Will Zalatoris -1
 -3 thru 14</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
@@ -173,11 +173,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -11
 -2 thru 7</td>
-      <td>Shane Lowry -2
-E thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 9</td>
       <td>Will Zalatoris -1
 -3 thru 14</td>
       <td>Jon Rahm +4
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Justin Thomas(W) -3
 -2 thru 9</td>
-      <td>Shane Lowry -2
-E thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 9</td>
       <td>Corey Conners -1
 E thru 10</td>
       <td>Jon Rahm +4
