--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:37:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:37:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-18</td>
       <td>Scottie Scheffler -11
--2 thru 7</td>
+-2 thru 8</td>
       <td>Justin Thomas(W) -3
 -2 thru 9</td>
       <td>Shane Lowry -3
@@ -175,7 +175,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -11
--2 thru 7</td>
+-2 thru 8</td>
       <td>Shane Lowry -3
 -1 thru 9</td>
       <td>Will Zalatoris -1
@@ -221,11 +221,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
-      <td>Sungjae Im -4
-E thru 8</td>
+      <td class="bigbold">-4</td>
       <td>Justin Thomas -3
 -2 thru 9</td>
+      <td>Sungjae Im -3
++1 thru 9</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Viktor Hovland(W) +2
