--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:41:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:42:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,51 +141,19 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
 -2 thru 8</td>
-      <td>Justin Thomas(W) -3
--2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 9</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
       <td>Will Zalatoris -1
 -3 thru 14</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-14</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Rory McIlroy -6
--7 thru 13</td>
-      <td>Justin Thomas -3
--2 thru 9</td>
-      <td>Viktor Hovland +2
--1 thru 14</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+2 thru 12</td>
-      <td class="greyout">Joaquin Niemann +6
-+2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-14</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Justin Thomas(W) -3
--2 thru 9</td>
-      <td>Shane Lowry -3
--1 thru 9</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -204,12 +172,60 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-13</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Rory McIlroy -6
+-7 thru 13</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Viktor Hovland +2
+-1 thru 14</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++2 thru 12</td>
+      <td class="greyout">Joaquin Niemann +6
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-13</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 9</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+-3 thru 14</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
-      <td>Justin Thomas -3
--2 thru 9</td>
+      <td>Rory McIlroy -6
+-7 thru 13</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -7
+-1 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
       <td>Corey Conners -1
 E thru 11</td>
       <td>Viktor Hovland +2
@@ -220,30 +236,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -7
--1 thru 8</td>
-      <td>Rory McIlroy -6
--7 thru 13</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Justin Thomas -3
--2 thru 9</td>
+      <td class="bigbold">-5</td>
       <td>Sungjae Im -3
 +1 thru 9</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
       <td>Viktor Hovland(W) +2
 -1 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Justin Thomas(W) -3
--2 thru 9</td>
+      <td class="bigbold">-2</td>
       <td>Shane Lowry -3
 -1 thru 9</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
       <td>Corey Conners -1
 E thru 11</td>
       <td>Jon Rahm +4
@@ -269,13 +269,13 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas(W) -3
--2 thru 9</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
       <td>Will Zalatoris -1
 -3 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -284,10 +284,26 @@ E thru 11</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
+      <td>Corey Conners(W) -1
+E thru 11</td>
+      <td>Robert MacIntyre +3
+-3 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas -3
--2 thru 9</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
       <td>Corey Conners -1
 E thru 11</td>
       <td>Dustin Johnson +2
@@ -300,26 +316,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners(W) -1
-E thru 11</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
-      <td>Robert MacIntyre +3
--3 (F)</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
       <td>Viktor Hovland(W) +2
 -1 thru 14</td>
       <td>Jon Rahm +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tony Finau +6
