--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:46:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:47:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Corey Conners -1
 E thru 11</td>
-      <td>Dustin Johnson +2
-+1 thru 13</td>
+      <td>Dustin Johnson +1
+E thru 14</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson +1
+E thru 14</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
-      <td>Dustin Johnson +2
-+1 thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
