--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:57:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:58:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
 -2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
       <td>Will Zalatoris -2
 -4 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 11</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-13</td>
       <td>Cameron Smith -7
 -1 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
       <td>Will Zalatoris -2
 -4 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 11</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -189,13 +189,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-12</td>
       <td>Cameron Smith -7
 -1 thru 9</td>
       <td>Rory McIlroy -6
 -7 thru 14</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
+      <td>Justin Thomas -1
+E thru 11</td>
       <td>Viktor Hovland +2
 -1 thru 16</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
@@ -221,11 +221,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -7
 -1 thru 9</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
+      <td>Justin Thomas -1
+E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Viktor Hovland +2
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -3
 +1 thru 10</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
+      <td>Justin Thomas -1
+E thru 11</td>
       <td>Viktor Hovland(W) +2
 -1 thru 16</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
+      <td>Justin Thomas(W) -1
+E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Jon Rahm +4
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
+      <td class="bigbold">1</td>
       <td>Collin Morikawa -2
 -3 thru 14</td>
       <td>Will Zalatoris -2
 -4 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 11</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
+      <td class="bigbold">7</td>
+      <td>Justin Thomas -1
+E thru 11</td>
       <td>Corey Conners E
 +1 thru 12</td>
       <td>Dustin Johnson +1
